added the errata contents

--- a/gpml/errata.html
+++ b/gpml/errata.html
@@ -1,3 +1,152 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-  here are the corrections
+  <head>
+    <title>Errata</title>
+
+<style type="text/css">
+body {font-family: sans-serif; font-size: 16px}
+</style>
+
+  </head>
+
+  <body>
+<h2>Errata for the second printing</h2>
+
+[Second printing can be identified by a note at the bottom of p xvi
+starting "Second printing: We thank ..."]
+
+<p>p. 50, algorithm 3.3, line 15 and 16, the term "+\sum<sub>i</sub>\log(...)"
+has the wrong sign, the correct term is "-\sum_<sub>i</sub>\log(...)" in both line 15 and 16. (thanks to Chris Mansley)</p>
+
+<p>p. 51, algorithm 3.4, line 11, two occurrences of "R" should be "R_c". A 
+simpler expression is "<b>c</b> := E_c(M<sup>T</sup>\(M\<b>b</b>))". (thanks
+to Yang Song and Chris Mansley)</p>
+
+<p>p. 56, above eq. (3.61) "the role of W" should be "the role of
+W^{-1}".</p>
+
+<p>p. 97, the eigenfunction given in eq. (4.40) is not normalized.
+It can be shown using eq 7.374.1 in Gradshteyn and Ryzhik (1980)
+that  "\phi_k(x) = h_k \exp(-(c-a)x^2) H_k(\sqrt{2c}x)" is 
+normalized wrt p(x) by setting "h_k^{-2} = \sqrt{a/c} 2^k k!". 
+(thanks to Christian Walder)</p>
+
+
+<h2>Errata for the first printing</h2>
+
+[In the first printing the last words on p xvi are "summer 2005"]
+
+<p>p. 11, eq (2.9), the third expression is incorrect. The first, second and 
+fourth expressions are equal. (thanks to Kevin S. Van Horn)</p>
+
+<p>p. 12, line 16, typo: "setting Z^{-1}=\Sigma_p^2", should be
+"setting Z^{-1}=\Sigma_p". (thanks to Mikhail Parakhin)</p>
+
+<p>p. 28, eq (2.41), top line, typo: the term "K_*K_y^{-1}(y - H \bar\beta)"
+should be "K<sup>T</sup>_*K_y^{-1}(y - H<sup>T</sup> \bar\beta)", ie transposes
+on both "K_*" and "H" are missing. (thanks to Mikhail Parakhin)</p>
+
+<p>p. 50, algorithm 3.3, line 15 and 16, the term "+\sum<sub>i</sub>\log(...)"
+has the wrong sign, the correct term is "-\sum_<sub>i</sub>\log(...)" in both line 15 and 16. (thanks to Chris Mansley)</p>
+
+<p>p. 51, algorithm 3.4, line 11, two occurrences of "R" should be "R_c". A 
+simpler expression is "<b>c</b> := E_c(M<sup>T</sup>\(M\<b>b</b>))". (thanks
+to Yang Song and Chris Mansley)</p>
+
+<p>p. 56, above eq. (3.61) "the role of W" should be "the role of
+W^{-1}".</p>
+
+<p>p. 59, penultimate line, replace "In eq.(3.65) we have factored" 
+with "In eq.(3.73) we have factored".
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 61, figure caption, the final two lines should read "The maximum value
+attained is 0.84, and the minimium is 0.19."</p>
+
+<p>p. 68, Figure 3.9, caption, third line: Figure 3.7(a) should read
+Figure 3.8(a).(thanks to Baback Moghaddam)</p>
+
+<p>p. 95, line 14 just under eq. (4.35) typo: "k(<b>x</b>,<b>x</b>')" should be
+"\tilde k(<b>x</b>,<b>x</b>')", ie there is a tilde missing over the "k".</p>
+
+<p>p. 97, the eigenfunction given in eq. (4.40) is not normalized.
+It can be shown using eq 7.374.1 in Gradshteyn and Ryzhik (1980)
+that  "\phi_k(x) = h_k \exp(-(c-a)x^2) H_k(\sqrt{2c}x)" is 
+normalized wrt p(x) by setting "h_k^{-2} = \sqrt{a/c} 2^k k!". 
+(thanks to Christian Walder)</p>
+
+<p>p. 102, eq (4.46), \phi_{\theta}(x) should be 
+\phi<sup>T</sup>_{\theta}(x). (thanks to Baback Moghaddam)</p>
+
+<p>p. 121, eq (5.18), the Kronecker delta, \delta<sub>xx'</sub> should really
+be on the <em>indexes</em> (not the <em>values</em> of x), i.e
+\delta<sub>pq</sub> as in eq (2.20). (thanks to Aki Vehtari)</p>
+
+<p>p. 125, eq (5.24), the matrix "B^{-1}" in the right-hand side is incorrect.
+Instead of "B^{-1}" it should be "(I+KW)^{-1}".</p>
+
+<p>p. 126, caption for Algorithm 5.1, 4th line: "line 11" should
+be "line 12". (thanks to Baback Moghaddam)</p>
+
+<p>p. 126, line -6: "B^{-1}=(I+W^\frac{1}{2}KW^\frac{1}{2})^{-1}" is 
+incorrect. It should be "(I+KW)^{-1}".</p>
+
+<p>p. 127, eq (5.26) and (5.27), in both equations, the left hand side
+should be the "partial derivative of the <em>log of</em>
+Z<sub>EP</sub>, not Z<sub>EP</sub> itself. (thanks to Baback Moghaddam
+and Jurgen Van Gael)</p>
+
+<p>p. 127, eq (5.26), first line, first term in rhs, 
+\Sigma should be \tilde{\Sigma}. (thanks to Baback Moghaddam)</p>
+
+<p>p. 137, both occurrences of 4 \pi should be 4 \pi^2.
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 139, eq (6.30), Z(u) should be Z(u) du.
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 144, eqs (6.37) and (6.38), both equations are missing a
+transpose on the first term's first <b>f</b> vector.
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 148, eq (6.43), replace both occurrences of 
+p(y_i|X, <b>y</b>, \theta) with p(y_i|X, <b>y</b>_{-i}, \theta).
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 153, eq (7.9), rhs final denominator should be
+1 + S^{-1}_f (<b>s</b>) \sigma^2_n/ \rho.
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 158, third line, replace J < \infty with KL_{sym} < \infty.
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 160, eq. (7.23), third line, last term 
+<b>k</b><sub>1</sub>(<b>x</b>)<sup>T</sup> should read 
+<b>k</b><sub>1</sub>(<b>x</b><sub>*</sub>)<sup>T</sup>.
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 160, above eq. (7.26): eq. (7.26) is a <b>lower</b> bound on the
+generalization error, not (as stated) an upper bound. (thanks to
+Benjamin Sobotta)</p>
+
+<p>p. 165, eq (7.34), first term is missing a trailing | (for det) 
+and the third term is missing a tr().
+(thanks to Baback Moghaddam)</p>
+
+<p>p. 182 and 184, sec. 8.3.7: Unfortunately there was an error in the scripts
+that meant that the noise variance was added in twice when computing the
+predictive variance for the PP runs; this affected the PP results for
+MSLL (but not SMSE) in Table 8.1 and Figure 8.1(b). This <a href=errata837.pdf>
+pdf file</a> gives corrected versions of the Table and plot. Notice now that
+there is not much difference in performance between the SR, PP and BCM methods
+for various sizes of <em>m</em> on this problem, and that they all outperform
+the SD method.</p>
+
+
+<br><br>
+
+Go back to the <a href=".">web page</a> for Gaussian Processes for Machine
+Learning.
+
+  </body>
 </html>
