--- a/gpml/index.html
+++ b/gpml/index.html
@@ -21,7 +21,7 @@ The MIT Press, 2006. ISBN 0-262-18253-X.
 <p>
   <center>
     <table width="100%" cellpadding="3" border="0">
-    <tr><td #ffffff>
+    <tr><td align=center #ffffff>
     [ <a href="chapters">Contents</a>
     | <a href="code">Software</a>
     | <a href="data">Datasets</a>
