--- a/gpml/index.html
+++ b/gpml/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <title>Gaussian Processes for Machine Learning: Book webpage</title>
     <style type="text/css">
       body {font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 16px}
     </style>
@@ -7,6 +9,7 @@
 
   <body>
 <center>
+
 <h2>Gaussian Processes for Machine Learning</h2>
 Carl Edward Rasmussen and Christopher K. I. Williams<br>
 The MIT Press, 2006. ISBN 0-262-18253-X.
@@ -21,7 +24,7 @@ The MIT Press, 2006. ISBN 0-262-18253-X.
 <p>
   <center>
     <table width="100%" cellpadding="3" border="0">
-    <tr><td align=center #ffffff>
+    <tr><td align="center" #ffffff>
     [ <a href="chapters">Contents</a>
     | <a href="code">Software</a>
     | <a href="data">Datasets</a>
