--- a/gpml/order.html
+++ b/gpml/order.html
@@ -11,7 +11,7 @@
     <h1>How to order the Book</h1>
 
 The book is 8&quot; &times; 10&quot;, 272 p. hardcover and has a list price of
-50.00 US&#36; or 22.95 UK&pound;.</p>
+50.00 US&#36; or 40.00 UK&pound;.</p>
 
 <p>In the table below are some book stores carrying the book:</p>
 
@@ -19,18 +19,18 @@ The book is 8&quot; &times; 10&quot;, 272 p. hardcover and has a list price of
 <center>
 <table class=a border=1 cellpadding=3 cellspacing=0>
 <tr><td align=center><b>location</b></td><td align=center><b>book store</b></td><td align=center><b>price</b></td></tr>
-<tr><td>Canada</td><td><a href="http://www.amazon.ca/exec/obidos/ASIN/026218253X">Amazon.ca</a></td><td><b>64.75 CDN&#36</b></td></tr>
+<tr><td>Canada</td><td><a href="http://www.amazon.ca/exec/obidos/ASIN/026218253X">Amazon.ca</a></td><td>64.75 CDN&#36</td></tr>
 <tr><td>France</td><td><a href="http://www.amazon.fr/exec/obidos/ASIN/026218253X">Amazon.fr</a></td><td>48.03 &euro;</td></tr>
 <tr><td>Germany</td>
 <td><a href="http://www.amazon.de/exec/obidos/ASIN/026218253X">Amazon.de</a></td><td>48.71 &euro;</td></tr>
 <tr><td>Japan</td><td><a href="http://www.amazon.co.jp/exec/obidos/ASIN/026218253X">amazon.co.jp</a></td><td>7563 JP&yen;</td></tr>
 <tr><td rowspan=2>UK</td>
-<td><a href="http://www.amazon.co.uk/exec/obidos/ASIN/026218253X">Amazon.co.uk</a></td><td><b>32.99 UK&pound;</b></td></tr>
+<td><a href="http://www.amazon.co.uk/exec/obidos/ASIN/026218253X">Amazon.co.uk</a></td><td>32.99 UK&pound;</td></tr>
 <tr><td><a href="https://www.whsmith.co.uk/products/gaussian-processes-for-machine-learning/carl-edward-rasmussen/christopher-k-i-williams/hardback/9780262182539.html">WHSmith</a></td><td>43.20 UK&pound;</td></tr>
 <tr><td rowspan=3>US</td>
 <td><a href="https://mitpress.mit.edu/books/gaussian-processes-machine-learning">The MIT Press</a></td><td>50.00 US&#36</td></tr>
 <tr><td><a href="https://www.barnesandnoble.com/w/gaussian-processes-for-machine-learning-carl-edward-rasmussen/1100658329?ean=9780262182539">Barnes and Noble</a></td><td>50.00 US&#36</td></tr>
-<tr><td><a href="http://amazon.com/exec/obidos/tg/detail/-/026218253X">Amazon.com</a></td><td><b>49.86 US&#36</b></td></tr>
+<tr><td><a href="http://amazon.com/exec/obidos/tg/detail/-/026218253X">Amazon.com</a></td><td>49.86 US&#36;</td></tr>
 </table>
 </center>
 </p>
