--- a/gpml/index.html
+++ b/gpml/index.html
@@ -62,9 +62,7 @@ format.</p>
 
 <p>The book was awarded the
 2009 <a href="https://bayesian.org/project/degroot-prize">DeGroot
-Prize</a> of the International Society for Bayesian Analysis.</p>
-
-<hr>
+  Prize</a> of the <a href="https://bayesian.org">International Society for Bayesian Analysis</a>.</p>
 
 <table width="100%"><tr><td>
 This page was most recently updated by <a href="http://mlg.eng.cam.ac.uk/carl">Carl Edward Rasmussen</a> on April 1st, 2022.</td>
