--- a/gpml/code/index.html
+++ b/gpml/code/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=http://gaussianprocess.org/gpml/code/matlab/doc">
+<meta http-equiv="refresh" content="0; url=./matlab/doc">
