--- a/index2.html
+++ b/index2.html
@@ -348,7 +348,7 @@ to the more elaborate [<a href="#rasmussen-williams-06">Rasmussen and Williams
 2006</a>]. All of these require only a minimum of prerequisites in the form of
 elementary probability theory and linear algebra.
 
-<!--#include file="ref-tut.html" -->
+<div w3-include-html="ref-tut.html"></div>
 
 <br>
 
